--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* navbar */
 .navbar .nav-link {
   font-size: 14px;
   text-transform: uppercase;
@@ -7,4 +8,22 @@
 
 .navbar .nav-item.active {
   border-left: 3px solid #444;
+}
+
+/* carousel */
+.carousel-item {
+  height: 450px;
+}
+
+.carousel-image-1 {
+  background: url('../img/image1.jpg');
+  background-size: cover;
+}
+.carousel-image-2 {
+  background: url('../img/image2.jpg');
+  background-size: cover;
+}
+.carousel-image-3 {
+  background: url('../img/image3.jpg');
+  background-size: cover;
 }
