--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,19 @@
   height: 100%;
   color: rgba(0, 0, 0, 0.7);
 }
+
+/* video play */
+#video-play {
+  position: relative;
+  min-height: 200px;
+  background: url('../img/media.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: 0 -300px;
+  text-align: center;
+  color: #fff;
+}
+
+#video-play a {
+  color: #fff;
+}
