--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,20 @@ body {
 #video-play a {
   color: #fff;
 }
+
+/* about page */
+
+/* page header */
+#page-header {
+  height: 200px;
+  background: url('../img/image1.jpg');
+  background-position: 0 -360px;
+  background-attachment: fixed;
+  color: #fff;
+  border-bottom: 1px solid #eee;
+  padding-top: 50px;
+}
+
+.about-img {
+  margin-top: -50px;
+}
