--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,18 @@ body {
 .about-img {
   margin-top: -50px;
 }
+
+/* services */
+#faq .card {
+  border: #444;
+}
+
+#faq a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+  background: #333;
+}
